# adscan

./: BACKLOG.md  CHANGELOG.md  CITATION.cff  Dockerfile.runtime  README.md  SECURITY.md  adscan.py  custom_config.yaml  pyproject.toml  pytest.ini
.devcontainer/: devcontainer.json
.github/: FUNDING.yml  release.yml
.github/ISSUE_TEMPLATE/: feature_request.yml
adscan_core/: branding.py  cli_catalog.py  embedded_telemetry_config.py  host_resource_thresholds.py  lab_catalog.py  logging_config.py  native_secret_scrub.py  paths.py  posture_score.py  pro_upsell.py  prompting.py  rich_output.py  rich_output_collection.py  sensitive.py  smb_exclusion_policy.py  telemetry.py  telemetry_queue.py  telemetry_streamer.py  theme.py  tier.py  version_context.py  welcome_host.py
adscan_core/cvss/: calculator.py  contextual_rules.py  models.py
adscan_core/output/: __init__.py  _attack_paths.py  _log.py  _modes.py  _panels.py  _premium.py  _progress.py  _prompts.py  _scan.py  _state.py  _tables.py
adscan_core/reporting/: __init__.py  finding_vuln_map.py  technical_report.py  vuln_catalog_meta.py
adscan_core/tui/: __init__.py  live_session.py  ntlm_sweep_dashboard.py  patience_notice.py  progress_dashboard.py
adscan_internal/: branding.py  command_runner.py  docker_commands.py  host_privileged_helper.py  passwords.py  reporting_compat.py  spraying.py  telemetry.py
adscan_internal/cli/: _collection_selector.py  _sample_kit.py  account_operators_escalation.py  ace_step_execution.py  adcs.py  adcs_exploitation.py  artifact_cracking.py  attack_graph_reports.py  attack_path_execution.py  attack_step_followups.py  backup_operators_escalation.py  binary_ops.py  bonuses.py  cast_player.py  check.py  ci.py  common.py  compromise_render.py  cracking.py  creds.py  cves_native.py  delegations.py  deliver.py  demo.py  dns.py  domains.py  dumps.py  enum.py  exploits.py  first_run_panel.py  flags.py  flags_panel.py  flags_panel_unconventional.py  gpo_abuse_handler.py  host_intelligence_panel.py  install.py  intelligence.py  inventory_diff.py  kerberos.py  ldap.py  (+40 more)
adscan_internal/cli/widgets/: __init__.py  hassession_live.py  intelligence_update.py  posture_probe_live.py  posture_show.py  trust_enum_live.py
adscan_internal/core/: decorators.py
adscan_internal/integrations/: README.md  auth_policy.py  gmsa.py
adscan_internal/integrations/impacket/: parsers.py  runner.py
adscan_internal/integrations/mssql/: __init__.py  helpers.py  models.py  native_backend.py  parsers.py  presentation.py  queries.py
adscan_internal/integrations/netexec/: __init__.py  parsers.py  runner.py
adscan_internal/models/: domain.py  service_ticket.py  workspace.py
adscan_internal/services/: __init__.py  _annotation_log_dedup.py  _confidential_channel_policy.py  _kerberos_recovery.py  _kerberos_spn.py  acl_change_cleanup_service.py  adcs_ca_registry_service.py  adcs_esc13.py  adcs_path_display.py  adcs_web_enrollment_probe.py  adidns.py  adspn.py  async_bridge.py  attack_graph_core.py  attack_graph_core_rustworkx.py  attack_graph_derived.py  attack_graph_service.py  attack_path_cleanup_service.py  attack_path_target_viability_service.py  attack_paths_core.py  attack_step_catalog.py  attack_step_support_registry.py  attack_step_target_access_service.py  auth_error_classification.py  auth_plan.py  auth_posture_service.py  certificate_mapping_service.py  cifs_credsweeper_scan_service.py  cleanup_ux.py  compromise_class.py  control_semantics.py  credential_recovery_service.py  credential_routing.py  credential_service.py  credential_store_service.py  credsweeper_library_service.py  credsweeper_service.py  ctf_flag_collector.py  ctf_flag_collector_catalog.py  ctf_flag_collector_strategies.py  (+120 more)
adscan_internal/services/adcs/: __init__.py  ca_admin.py  ca_backup.py  cert_auth.py  cert_forge.py  cert_request.py  esc_ca_manage.py  esc_cleanup.py  esc_enrollment.py  esc_preflight.py  esc_principal_write.py  esc_relay.py  esc_runner.py  esc_template_write.py  esc_types.py  pass_the_cert.py  shadow_credentials.py  template_modify.py  types.py
adscan_internal/services/auth/: __init__.py  auth_retry.py  credential_context.py  ntlm_capability.py
adscan_internal/services/coercion/: __init__.py  aiosmb_adapter.py  core.py  display.py  registry.py  runner.py
adscan_internal/services/collector/: __init__.py  acl_parser.py  adcs_collector.py  audit_analyzer.py  credential_fields_analyzer.py  dns_resolver.py  group_inference_analyzer.py  host_collector.py  inventory_persistence.py  ldap_collector.py  ldap_credentials.py  ldap_scope.py  models.py  orchestrator.py  persistence.py  scope.py  shadow_credentials_analyzer.py  share_collector.py  share_ntfs_verification.py  smb_collector.py  well_known_sids.py
adscan_internal/services/credentials/: __init__.py  credential_metadata.py  privilege_role.py
adscan_internal/services/cve_scanner/: __init__.py  catalog.py  result.py  runner.py
adscan_internal/services/enumeration/: kerberos.py  ldap.py  smb.py  smb_shares_native.py  trust_query.py
adscan_internal/services/exploitation/: __init__.py  _samr_backend.py  acl.py  base.py  delegation.py  delegation_native.py  dpapi_browser_core.py  dpapi_credential_processor.py  dpapi_models.py  dpapi_native_dump.py  dpapi_psrp_dump.py  dpapi_user_decrypt.py  dump_display.py  gpo.py  hassession_native.py  host_fingerprint_service.py  kerberos_key_list.py  laps_native.py  lsass.py  lsass_orchestrator.py  machine_account_elevation.py  minted_account_identity.py  mssql.py  mssql_seimpersonate.py  (+11 more)
adscan_internal/tui/: data.py
adscan_internal/workspaces/: edr_intelligence.py  io.py  loader.py  manager.py  session.py  state.py
adscan_launcher/: cli.py  docker_commands.py  docker_host_install.py  docker_pull_diagnostics.py  docker_runtime.py  host_privileged_helper.py  runtime_capability_check.py  runtime_session.py  update_manager.py
docker/: adscan_entrypoint.sh  unbound_adscan_control.conf
src/windows_tools/: pss_dumper.cs  rtlcp_dumper.cs  wsass_dumper.cpp
tools/avlab/: RUNBOOK.md  __init__.py  __main__.py  builder.py
(+166 files in other folders)
