[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adscan"
version = "9.1.1"
description = "Free Active Directory pentesting CLI for AD enumeration, attack paths, Kerberoasting, AS-REP roasting, ADCS, DCSync, password spraying, and CTF labs."
readme = "README.md"
authors = [{ name = "ADscan" }]
requires-python = ">=3.9"
keywords = [
    "active-directory",
    "activedirectory",
    "pentesting",
    "penetration-testing",
    "enumeration",
    "kerberoasting",
    "as-rep-roasting",
    "adcs",
    "dcsync",
    "password-spraying",
    "red-team",
    "ctf",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX :: Linux",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "Topic :: Security",
    "Topic :: System :: Networking",
]
dependencies = [
    "rich>=13.0,<16.0",
    "requests>=2.31.0,<3.0",
    "packaging>=23.0,<27.0",
    "certifi>=2023.0.0",
    "credsweeper==1.15.1; python_version >= '3.10'",
    "sentry-sdk>=1.40.0,<3.0",
]

[project.optional-dependencies]
dev = [
    "badldap>=0.7.5,<0.8",
    "kerbad>=0.5.9",
    "impacket==0.13.1",
    "pytest>=8.0,<9.0",
    # pytest-timeout converts hung tests into explicit failures with a
    # stack trace at the deadline instead of letting them stall CI for
    # hours. Configured in pytest.ini with a 60s default per test plus
    # ``thread`` method so the timeout works regardless of whether the
    # test is blocked on Python or in a C-level call.
    "pytest-timeout>=2.3,<3.0",
    "PyYAML>=6.0,<7.0",
    "ruff>=0.9.0,<1.0",
    "build>=1.2.0,<2.0",
    "twine>=6.0.0,<7.0",
    "mypy>=1.8.0",
    "types-requests",
    "pytest-html",
    "jinja2",
    "winacl==0.1.9",
]
cli = [
    "badldap>=0.7.5,<0.8",
    "kerbad>=0.5.9",
    "impacket==0.13.1",
    "aiosmb>=0.4.9",
    "aardwolf>=0.2.13",
    "pypykatz>=0.6.10",
    "psutil",
    "python-docx",
    "weasyprint>=60.0",
    "playwright==1.60.0",
    "jinja2>=3.0",
    "graphviz>=0.20",
    "python-magic>=0.4.27,<0.5; platform_system == 'Linux'",
    "markitdown>=0.1.5,<0.2; python_version >= '3.10'",
    "dnspython>=2.7.0,<3.0",
    # `pydantic-ai` (full) drags xai-sdk via the `xai` extra, and xai-sdk pins
    # `packaging<26` upstream — incompatible with packaging>=26 needed by
    # pyinstaller-hooks-contrib 2026.5 etc. ADscan does not use the xAI/Grok
    # provider (only openai/anthropic/google/etc. via Agent string config or
    # external_cli fallback), so we install `pydantic-ai-slim` with every
    # other extra explicitly enumerated. Same `pydantic_ai` Python module,
    # just without the xai dependency footprint.
    "pydantic-ai-slim[ag-ui,anthropic,bedrock,cli,cohere,evals,fastmcp,google,groq,huggingface,logfire,mcp,mistral,openai,retries,temporal,ui,vertexai]>=0.8.1",
    "netifaces",
    "scapy>=2.5.0,<3.0",
    "prompt_toolkit",
    "questionary",
    "posthog",
    "pypsrp[kerberos]==0.8.1; python_version < '3.10'",
    "pypsrp[kerberos]==0.9.0; python_version >= '3.10'",
    "pydantic-settings>=2.4.0",
    "selenium>=4.28.0,<5.0",
    "textual>=0.80.0",
    "redis>=5.0.0,<7.1.0",
    "winacl==0.1.9",
]

[project.urls]
homepage = "https://github.com/ADscanPro/adscan"
documentation = "https://adscanpro.com/docs"
repository = "https://github.com/ADscanPro/adscan"
issues = "https://github.com/ADscanPro/adscan/issues"
changelog = "https://github.com/ADscanPro/adscan/releases"

[project.scripts]
adscan = "adscan_launcher.cli:main"
"adscan.py" = "adscan_launcher.cli:main"

[tool.uv.sources]
# Vendored skelsec native AD stack — committed under vendor/ as the single
# source of truth for the entire skelsec ecosystem. We pin to the local
# checkout (not PyPI) so the code we read in vendor/<lib>/ is exactly what
# runs in production. Refresh via scripts/refresh_vendor.sh.
#
# Why this exists: PyPI releases of these libraries lag the upstream
# repositories by months and ship known protocol bugs (e.g., aiosmb 0.4.14
# on PyPI rejects cross-principal SchRpcRegisterTask with
# rpc_s_access_denied — fixed in main but unreleased). Vendoring eliminates
# the drift, satisfies the CLAUDE.md "Read source before calling" rule, and
# keeps the entire skelsec stack version-coherent.
# editable = true  → vendor/ source is the live import; any patch to vendor/<lib>/
#                    is reflected immediately without `uv sync`. Required for
#                    LOCALLY_MAINTAINED libs that carry ADscan-specific edits.
# editable = false → wheel snapshot; safe for libs we never patch.
aardwolf     = { path = "vendor/aardwolf",     editable = true  }
aiosmb       = { path = "vendor/aiosmb",       editable = true  }
asysocks     = { path = "vendor/asysocks",     editable = false }
badauth      = { path = "vendor/badauth",      editable = true  }
badldap      = { path = "vendor/badldap",      editable = true  }
kerbad       = { path = "vendor/kerbad",       editable = true  }
winacl       = { path = "vendor/winacl",       editable = false }
pypykatz     = { path = "vendor/pypykatz",     editable = false }

[tool.setuptools.packages.find]
include = ["adscan_core*", "adscan_launcher*"]

[tool.setuptools.package-data]
adscan_launcher = ["assets/**/*.yml", "assets/**/*.yaml"]
adscan_internal = ["pro/reporting/templates/*.html", "assets/demo_workspace/*.json", "assets/report_samples/*.pdf"]
